# explore_pytorch

./: README.md  pyproject.toml
container/: README.md  run_cupy
container/examples/: cuda_info.py
container/examples/cg/: cg.py
container/examples/finance/: black_scholes.py  monte_carlo.py
container/examples/fuse/: fused_squared_diffs.py
jupyter/: installing_cuda_drivers_on_fedora39.ipynb  installing_cuda_drivers_on_fedora39.md  installing_cuda_drivers_on_fedora40.md  nvidia-driver-40.sh  pytorch-install-jul-2020.ipynb  t81_558_class_03_2_pytorch.ipynb  t81_558_class_08_4_bayesian_hyperparameter_opt.ipynb
